增加图片上传

--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 
     <script type="text/javascript">
       // var WEBPACK_CONIFG_HOST = '';
+       function changepic(obj,className) {
+        //console.log(obj.files[0]);//这里可以获取上传文件的name
+        // var last = className + ' '
+        var newsrc=getObjectURL(obj.files[0]);
+        document.getElementsByClassName(className)[0].getElementsByClassName('show')[0].style.display = 'inline-block';
+        // console.log('document.getElementsByClassName(className)[0]',document.getElementsByClassName(className)[0])
+        document.getElementsByClassName(className)[0].getElementsByClassName('show')[0].src=newsrc;
+      }
+      //建立一個可存取到該file的url
+      function getObjectURL(file) {
+          var url = null ;
+          // 下面函数执行的效果是一样的，只是需要针对不同的浏览器执行不同的 js 函数而已
+          if (window.createObjectURL!=undefined) { // basic
+              url = window.createObjectURL(file) ;
+          } else if (window.URL!=undefined) { // mozilla(firefox)
+              url = window.URL.createObjectURL(file) ;
+          } else if (window.webkitURL!=undefined) { // webkit or chrome
+              url = window.webkitURL.createObjectURL(file) ;
+          }
+          return url ;
+      }
     </script>
   </head>
   <body>
