--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>物业管理</title>
     <!-- <link rel="stylesheet" type="text/css" href="./base.css"> -->
+    <link rel="stylesheet" href="./static/bh.min.css">
+    <link rel="stylesheet" href="./static/bh-scenes.min.css">
     <link rel="stylesheet" href="./static/iconfont.css">
     <link rel="stylesheet" href="./static/steps/steps.css">
 
