--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="./static/bh-scenes.min.css">
     <link rel="stylesheet" href="./static/iconfont.css">
     <link rel="stylesheet" href="./static/steps/steps.css">
-
+    <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
+    <script>new VConsole()</script>
+    <style>
+      #__vconsole .vc-switch {
+        bottom:60px !important;
+      }
+    </style>
     <script type="text/javascript">
       // var WEBPACK_CONIFG_HOST = '';
        function changepic(obj,className) {
