--- a/index.html
+++ b/index.html
@@ -4,76 +4,99 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>物业管理</title>
-    <!-- <link rel="stylesheet" type="text/css" href="./base.css"> -->
+    <link rel="stylesheet" type="text/css" href="./static/app.css">
     <link rel="stylesheet" href="./static/bh.min.css">
     <link rel="stylesheet" href="./static/bh-scenes.min.css">
     <link rel="stylesheet" href="./static/iconfont.css">
     <link rel="stylesheet" href="./static/steps/steps.css">
-    <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
+    <!-- <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script>new VConsole()</script>
     <style>
       #__vconsole .vc-switch {
         bottom:60px !important;
       }
-    </style>
+    </style> -->
     <script type="text/javascript">
-      // var WEBPACK_CONIFG_HOST = '';
-       function changepic(obj,className) {
-        //console.log(obj.files[0]);//这里可以获取上传文件的name
-        // var last = className + ' '
-        for (var i = 0; i < obj.files.length; i++) {
-          var fileItem = obj.files[i];
-          var newsrc=getObjectURL(obj.files[i]);
-          var tmpImg = document.createElement('img');
-          tmpImg.src=newsrc;
-          tmpImg.style.display="inline-block";
-          tmpImg.style.height = '60px';
-          tmpImg.style.width = '60px';
-          document.getElementById('wy-imgs-upload').appendChild(tmpImg)
-        }
-        // var newsrc=getObjectURL(obj.files[0]);
-        // // console.log('document.getElementsByClassName(className)[0]',document.getElementsByClassName(className)[0])
-        // document.getElementsByClassName(className)[0].getElementsByClassName('show')[0].style.display = 'inline-block';
-        // // console.log('document.getElementsByClassName(className)[0]',document.getElementsByClassName(className)[0])
-        // document.getElementsByClassName(className)[0].getElementsByClassName('show')[0].src=newsrc;
-      }
-      //建立一個可存取到該file的url
-      function getObjectURL(file) {
-          var url = null ;
-          // 下面函数执行的效果是一样的，只是需要针对不同的浏览器执行不同的 js 函数而已
-          if (window.createObjectURL!=undefined) { // basic
-              url = window.createObjectURL(file) ;
-          } else if (window.URL!=undefined) { // mozilla(firefox)
-              url = window.URL.createObjectURL(file) ;
-          } else if (window.webkitURL!=undefined) { // webkit or chrome
-              url = window.webkitURL.createObjectURL(file) ;
-          }
-          return url ;
-      }
-      Date.prototype.Format = function (fmt) { //author: meizz
-        var o = {
-            "M+": this.getMonth() + 1, //月份
-            "d+": this.getDate(), //日
-            "h+": this.getHours(), //小时
-            "m+": this.getMinutes(), //分
-            "s+": this.getSeconds(), //秒
-            "q+": Math.floor((this.getMonth() + 3) / 3), //季度
-            "S": this.getMilliseconds() //毫秒
-        };
-        if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
-        for (var k in o)
-            if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
-        return fmt;
+      if (window.location.href.indexOf('waiqinzx')>-1 || window.location.href.indexOf('localhost')>-1) {
+        window.hostPath = 'http://121.196.192.110:2057/zhwy';
+      } else {
+        window.hostPath = 'http://njst2020.com:2057/zhwy';
       }
     </script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
+    <style type="text/css">
+      .close {
+          position: absolute;
+          right: -6px;
+          top: -8px;
+          width: 16px;
+          height: 16px;
+          background: #3789F9;
+          border-radius: 8px;
+      }
+      .close:before, .close:after {
+        position: absolute;
+        left: 7px;
+        top:2px;
+        content: ' ';
+        height: 10px;
+        width: 2px;
+        background-color: #fff;
+      }
+      .close:before {
+        transform: rotate(45deg);
+      }
+      .close:after {
+        transform: rotate(-45deg);
+      }
+    </style>
+    <link rel="stylesheet" href="./static/swiper.min.css">
+    <script src="./static/swiper.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        /*调起大图 S*/
+        var mySwiper = new Swiper('.swiper-container2', {
+              loop: false,
+              pagination: '.swiper-pagination2',
+        });
+        $("#app").on("click", ".post img", function() {
+          var imgBox = $(this).parents(".post").find("img");
+          var i = $(imgBox).index(this);
+          $(".big_img .swiper-wrapper").html("")
+
+          for(var j = 0 ,c = imgBox.length; j < c ;j++){
+           $(".big_img .swiper-wrapper").append('<div class="swiper-slide"><div class="cell"><img src="' + imgBox.eq(j).attr("src") + '" / ></div></div>');
+          }
+          mySwiper.updateSlidesSize();
+          mySwiper.updatePagination();
+          $(".big_img").css({
+              "z-index": 1001,
+              "opacity": "1"
+          });
+          mySwiper.slideTo(i, 0, false);
+          return false;
+        });
+        $(".big_img").on("click", function() {
+            $(this).css({
+                "z-index": "-1",
+                "opacity": "0"
+            });
+        });
+      });
+    </script>
+    <script src="./static/func.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <div class="big_img">
+        <div class="swiper-container2 swiper-container-horizontal">
+          <div class="swiper-wrapper"></div>
+        </div>
+        <div class="swiper-pagination2 swiper-pagination-bullets">
+          <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
+        </div>
+    </div>
     <!-- built files will be auto injected -->
     <script src="./static/steps/steps.js"></script>
-    <!-- <script src="./static/exif-js.js"></script> -->
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/exif-js"></script> -->
-
   </body>
 </html>
