增加公告管理功能

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <div class="big_img">
+    <div class="big_img" style="position: absolute;bottom: 0;">
         <div class="swiper-container2 swiper-container-horizontal">
           <div class="swiper-wrapper"></div>
         </div>
@@ -43,11 +43,12 @@
 
     <script src="./static/js/manifest.js"></script>
     <script src="./static/js/vendor.js"></script>
-    <script src="./static/js/app.js"></script>
-    <script src="./static/jquery.js"></script>
-    <script src="./static/steps/steps.js"></script>
-    <script src="./static/swiper.min.js"></script>
-    <script src="./static/func.js"></script>
-    <!-- <script>document.write('<script src="./static/js/app.js?t=' + new Date().getTime() + '"><\/script>')</script> -->
+    <!-- <script src="./static/js/app.js"></script> -->
+    <script>document.write('<script src="./static/js/app.js?t=' + new Date().getTime() + '"><\/script>')</script>
+    <script src="./static/jquery.js" defer="defer"></script>
+    <script src="./static/steps/steps.js" defer="defer"></script>
+    <script src="./static/swiper.min.js" defer="defer"></script>
+    <script src="./static/func.js" defer="defer"></script>
+
   </body>
 </html>
