--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- <link rel="stylesheet" href="./static/bh.min.css">
     <link rel="stylesheet" href="./static/bh-scenes.min.css"> -->
     <!-- <link rel="stylesheet" href="./static/iconfont.css"> -->
-    <link rel="stylesheet" href="./static/steps/steps.css">
-    <link rel="stylesheet" href="./static/swiper.min.css">
-    <link rel="stylesheet" href="./static/css/app.css">
+    <link rel="stylesheet" href="./static/steps/steps.css?t=1">
+    <link rel="stylesheet" href="./static/swiper.min.css?t=1">
+    <link rel="stylesheet" href="./static/css/app.css?t=1">
     <!-- <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script>new VConsole()</script>
     <style>
@@ -41,14 +41,14 @@
     </div>
     <!-- built files will be auto injected -->
 
-    <script src="./static/js/manifest.js"></script>
-    <script src="./static/js/vendor.js"></script>
+    <script src="./static/js/manifest.js?t=1"></script>
+    <script src="./static/js/vendor.js?t=1"></script>
     <!-- <script src="./static/js/app.js"></script> -->
     <script>document.write('<script src="./static/js/app.js?t=' + new Date().getTime() + '"><\/script>')</script>
-    <script src="./static/jquery.js" defer="defer"></script>
-    <script src="./static/steps/steps.js" defer="defer"></script>
-    <script src="./static/swiper.min.js" defer="defer"></script>
-    <script src="./static/func.js" defer="defer"></script>
+    <script src="./static/jquery.js?t=1" defer="defer"></script>
+    <script src="./static/steps/steps.js?t=1" defer="defer"></script>
+    <script src="./static/swiper.min.js?t=1" defer="defer"></script>
+    <script src="./static/func.js?t=1" defer="defer"></script>
 
   </body>
 </html>
