--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- <link rel="stylesheet" href="./static/iconfont.css"> -->
     <link rel="stylesheet" href="./static/steps/steps.css?t=1">
     <link rel="stylesheet" href="./static/swiper.min.css?t=1">
-    <link rel="stylesheet" href="./static/css/app.css?t=1">
+    <link rel="stylesheet" href="./static/app.css?t=2">
+    <link rel="stylesheet" href="./static/css/app.css?t=2">
     <!-- <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script>new VConsole()</script>
     <style>
