--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>物业管理</title>
+    <title>智慧物业</title>
     <!-- <link rel="stylesheet" type="text/css" href="./static/app.css"> -->
     <!-- <link rel="stylesheet" href="./static/bh.min.css">
     <link rel="stylesheet" href="./static/bh-scenes.min.css"> -->
