--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>智慧物业</title>
+    <title>智慧社区</title>
     <!-- <link rel="stylesheet" type="text/css" href="./static/app.css"> -->
     <!-- <link rel="stylesheet" href="./static/bh.min.css">
     <link rel="stylesheet" href="./static/bh-scenes.min.css"> -->
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="./static/swiper.min.css?t=1">
     <link rel="stylesheet" href="./static/app.css?t=2">
     <!-- <link rel="stylesheet" href="./static/css/app.css?t=2"> -->
-    <!-- <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
+    <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script>new VConsole()</script>
     <style>
       #__vconsole .vc-switch {
         bottom:60px !important;
       }
-    </style> -->
+    </style>
     <script type="text/javascript">
       document.write('<link rel="stylesheet" href="./static/css/app.css?t=' + new Date().getTime() + '">');
 
