正式环境链接

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <link rel="stylesheet" href="./static/swiper.min.css?t=1">
     <link rel="stylesheet" href="./static/app.css?t=2">
     <!-- <link rel="stylesheet" href="./static/css/app.css?t=2"> -->
-    <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
+    <!-- <script src="http://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script>new VConsole()</script>
     <style>
       #__vconsole .vc-switch {
         bottom:60px !important;
       }
-    </style>
+    </style> -->
     <script type="text/javascript">
       document.write('<link rel="stylesheet" href="./static/css/app.css?t=' + new Date().getTime() + '">');
-
-      if (window.location.href.indexOf('waiqinzx')>-1 || window.location.href.indexOf('localhost')>-1) {
+      if (window.location.href.indexOf('xixiaoli')>-1 || window.location.href.indexOf('localhost')>-1) {
         window.hostPath = 'http://121.196.192.110:2057/zhwy';
+        window.hostPath2 = 'http://daka.xixiaoli.com';
       } else {
-        window.hostPath = 'http://njst2020.com:2057/zhwy';
+        window.hostPath = 'http://zhsqapi.njst2020.com:8090/zhwy';
+        window.hostPath2 = 'http://zhsqwx.njst2020.com';
       }
     </script>
     <!-- <script>
