--- a/redirect.html
+++ b/redirect.html
@@ -10,9 +10,9 @@
     <script>
       document.title = "智慧社区";
       // alert(window.location.origin)
-      if (window.location.origin.indexOf('toupiaowx.njst2020')>-1) {
+      if (window.location.origin.indexOf('zhsqwx.njst2020.com')>-1) {
         // var appid = "wxe926da557f89d2c4";
-        var url = "http://toupiaowx.njst2020.com/index.html";
+        var url = "http://zhsqwx.njst2020.com/index.html";
       } else {
         // var appid = "wxf53735790a600140";
         var url = "http://daka.xixiaoli.com/index.html";
